# json-prettify

./: .gitignore  .pre-commit-config.yaml  COMPREHENSIVE_TEST_REPORT.md  Makefile  README.md  pyproject.toml
.claude/: config.json
.github/workflows/: ci.yml
src/json_prettify/: __init__.py  __main__.py  cli.py  formatter.py  prettify.py  schema_validator.py  stats.py  validator.py
tests/: __init__.py  test_cli.py  test_formatter.py  test_integration.py  test_prettify.py  test_validator.py
tests/fixtures/invalid/: single_quotes.json  syntax_error.json  trailing_comma.json
tests/fixtures/valid/: array.json  nested.json  simple.json  unicode.json
